# BMS

backend/: .gitignore  manage.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
backend/apps/core/: apps.py  models.py  permissions.py  serializers.py  signals.py  views.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/inventory/: admin.py  models.py  serializers.py  service.py  views.py
backend/apps/inventory/migrations/: 0001_initial.py
backend/apps/sales/: models.py  serializers.py  views.py
backend/apps/sales/migrations/: 0001_initial.py
backend/apps/sales/tests/: test_sales.py
backend/taskon_bms/: asgi.py  settings.py  urls.py  wsgi.py
