[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.0",
    "dj-database-url==3.0.1",
    "django==5.2.8",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "factory-boy==3.3.3",
    "faker==38.2.0",
    "iniconfig==2.3.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.11",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pytest==9.0.1",
    "pytest-django==4.11.1",
    "python-decouple==3.8",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
]
